# nes

./: CMakeLists.txt  README.md
include/: pipeline.hpp  pipeline_executor.hpp  serial_executor.hpp  task.hpp  thread_pool.hpp  utility.hpp
source/: bench.cpp  pipeline.cpp  test.cpp  thread_pool.cpp
